--- a/styles/home.scss
+++ b/styles/home.scss
@@ -86,3 +86,14 @@ body {
   padding: 0 10px;
   text-decoration: none;
 }
+
+.navbar-userCount {
+  color:inherit;
+  display: block;
+  float:right;
+  font-size: 20px;
+  height: 60px;
+  line-height: 60px;
+  padding: 0 10px;
+  text-decoration: none;
+}
